Fix: logo local en assets

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <section class="hero">
-        <img src="https://drive.google.com/uc?export=view&id=1QrH8FVaOXmbuoYlx1piBZbYoYBeH9oSF" alt="SimAcademy Logo" class="logo">
+        <img src="assets/logo.png" alt="SimAcademy Logo" class="logo">
         
         <p class="tagline">Educación en Simulación Clínica</p>
         
